# JucePlugins

./: .gitignore  CMakeLists.txt  README.md
ArpeggiatorPlugin/: CMakeLists.txt
ArpeggiatorPlugin/impls/: ArpeggiatorPluginDemo.cpp
ArpeggiatorPlugin/includes/: ArpeggiatorPluginDemo.h
DSP/: CMakeLists.txt
DSP/impls/: Main.cpp
DSP/includes/: DSPConvolutionTutorial_01.h  DSPConvolutionTutorial_02.h  DSPIntroductionTutorial_01.h  DSPIntroductionTutorial_02.h
HelloWorld/: CMakeLists.txt
Host/: CMakeLists.txt
Host/impls/: Main.cpp
Host/includes/: HostPluginDemo.h
MidiDrivers/: CMakeLists.txt
MidiDrivers/includes/: HandlingMidiEventsTutorial.h
Synth/: CMakeLists.txt
Synth/impls/: Entry.cpp
Synth/includes/: SynthUsingMidiInputTutorial_01.h  SynthUsingMidiInputTutorial_02.h
Tests/: CMakeLists.txt  test.cpp
WaveTable/: CMakeLists.txt
WaveTable/impls/: Main.cpp
WaveTable/includes/: WavetableSynthTutorial_01.h  WavetableSynthTutorial_04.h
cmake/: cpm.cmake
includes/: JucePluginDefines.h
